Adicionar rotas delete
